--- a/index.html
+++ b/index.html
@@ -3,29 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>Panther Working Title</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
-
+        <div class="logo">
+            Header Logo
+        </div>
+        <ul class="links">
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
     </div>
     <div class="body">
         <div class="introduction">
-
+            <div class="introduction-title">
+                This website is awesome
+            </div>
+            <div class="introduction-subtext">
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+            </div>
+            <button>Sign Up</button>
         </div>
         <div class="information">
-
+            <div class="information-title">Some random information</div>
+            <div class="information-card-container">
+                <div class="card">
+                    <img src="" alt="">
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <div class="card-text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
         </div>
         <div class="quote">
-
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice. - Thor, God of Thunder
         </div>
-        <div class="sign-up">
+        <div class="signup">
             <div class="call-to-action">
-                
+                <div class="signup-title">Call to action! It's time!</div>
+                <div class="signup-subtext">Sign up for our product by clicking that button right over there!</div>
+                <button>Sign Up</button>
             </div>
         </div>
     </div>
     <div class="footer">
-
+        <div class="footer-text">Copyright [copyright logo] The Odin Project 2023</div>
     </div>
 </body>
 </html>
