--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             Header Logo
         </div>
         <ul class="links">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
         </ul>
     </div>
     <div class="body">
@@ -48,8 +48,11 @@
             </div>
         </div>
         <div class="quote">
-            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it.
-            Who knows? All I know is that it looks nice. - Thor, God of Thunder
+            <div class="quote-text"><em>
+                This is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just filling up space, or maybe people will actually read it. 
+                Who knows? All I know is that it looks nice.</em></div>
+                - Thor, God of Thunder
         </div>
         <div class="signup">
             <div class="call-to-action">
