Finish styles.css for introduction section

--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
     </div>
     <div class="body">
         <div class="introduction">
-            <div class="introduction-title">
-                This website is awesome
+            <div class="introduction-text">
+                <div class="introduction-title">
+                    This website is awesome
+                </div>
+                <div class="introduction-subtext">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                </div>
+                <button>Sign Up</button>
             </div>
-            <div class="introduction-subtext">
-                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
-            </div>
-            <button>Sign Up</button>
+            <img class="introduction-picture" src="./images/panther-no-background.png" alt="illustration of a panther">
         </div>
         <div class="information">
             <div class="information-title">Some random information</div>
