Finish formatting information section

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             <div class="information-title">Some random information</div>
             <div class="information-card-container">
                 <div class="card">
-                    <img src="" alt="">
+                    <img class="card-image" src="./images/real-panther.jpg" alt="real panther">
                     <div class="card-text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <img class="card-image" src="./images/cartoon-panter.jpg" alt="cartoon panther">
                     <div class="card-text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <img class="card-image" src="./images/not-panther.jpg" alt="reptile">
                     <div class="card-text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <img class="card-image" src="./images/hidden-panther.jpg" alt="panther in shadows">
                     <div class="card-text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
