--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
             <div class="quote-text"><em>
                 This is an inspiring quote, or a testimonial from a customer. 
                 Maybe it's just filling up space, or maybe people will actually read it. 
-                Who knows? All I know is that it looks nice.</em></div>
-                - Thor, God of Thunder
+                Who knows? All I know is that it looks nice.</em>
+            </div>
+            <div class="quote-attribution">
+            - Thor, God of Thunder
+            </div> 
         </div>
         <div class="signup">
             <div class="call-to-action">
