Finish formatting signup section

--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
         </div>
         <div class="signup">
             <div class="call-to-action">
-                <div class="signup-title">Call to action! It's time!</div>
-                <div class="signup-subtext">Sign up for our product by clicking that button right over there!</div>
-                <button>Sign Up</button>
+                <div class="signup-text">
+                    <div class="signup-title">Call to action! It's time!</div>
+                    <div class="signup-subtext">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="signup-button"><button>Sign Up</button></div>
             </div>
         </div>
     </div>
