Finish formatting footer section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div class="footer">
-        <div class="footer-text">Copyright [copyright logo] The Odin Project 2023</div>
+        <div class="footer-text">Copyright &#169; The Odin Project 2023</div>
     </div>
 </body>
 </html>
